--- a/Administrador/Views/MantenedorRecintos/Index.cshtml
+++ b/Administrador/Views/MantenedorRecintos/Index.cshtml
@@ -72,7 +72,7 @@
                 Agregar recinto
                 <i class="checkmark icon"></i>
             </div>
-            <div class="ui icon red button" onclick="window.location.replace('/Home')">Volver<i class="left chevron icon"></i></div>
+            <div class="ui icon red button" onclick="window.history.back()">Volver<i class="left chevron icon"></i></div>
             @*<div id="btnExportar" class="ui labeled purple icon button" onclick="ExportarExcel();">
                     <i class="table download icon"></i>Exportar a Excel
                 </div>*@
