--- a/Administrador/Views/Home/Index.cshtml
+++ b/Administrador/Views/Home/Index.cshtml
@@ -62,125 +62,147 @@
             <div style="height:5px"></div>
             <h2 style="color:white" class="ui center aligned header">
                 @*<img src="~/Recursos/Imagenes/IconoAsmar.png" class="ui image">*@
-                Bienvenido a Komunity @Model.Nombre
+                Bienvenido @Model.Nombre
             </h2>
             <br />
             <div class="ui link cards">
                 <div class="container">
                     <div class="row">
-
-                        @*CargadorProductos*@
-                        <div class="col-md-4">
-                            <div class="card mb-4 shadow-sm" style="opacity:.85">
-                                <div class="contenedor-imagen">
-                                    <img class="card-img-top" src="~/Recursos/Imagenes/BtnUser.png" alt="Card image cap">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-text">Aquí podrás cargar los productos desde el excel de stock vs consumo de Rayén.</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <div id="btnMarketPlace" onclick="window.location.href = '/AdminPersonas?limpiar=1'" class="ui right labeled icon black button">
-                                                Copropietarios
-                                                <i class="hand point left icon"></i>
+                        @if (SessionH.Usuario.Rol_Id == 1)
+                        {
+                            <div class="col-md-4">
+                                <div class="card mb-4 shadow-sm" style="opacity:.85">
+                                    <div class="contenedor-imagen">
+                                        <img class="card-img-top" src="~/Recursos/Imagenes/BtnUser.png" alt="Card image cap">
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">Aquí podrás cargar los productos desde el excel de stock vs consumo de Rayén.</p>
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <div class="btn-group">
+                                                <div id="btnMarketPlace" onclick="window.location.href = '/AdminPersonas?limpiar=1'" class="ui right labeled icon black button">
+                                                    Copropietarios
+                                                    <i class="hand point left icon"></i>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-
-                        <div class="col-md-4">
-                            <div class="card mb-4 shadow-sm" style="opacity:.85">
-                                <div class="contenedor-imagen">
-                                    <img class="card-img-top" src="~/Recursos/Imagenes/Btnveh.png" alt="Card image cap">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-text">Aquí podrás cargar los productos desde el excel de stock vs consumo de Rayén.</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <div id="btnMarketPlace" onclick="window.location.href = '/MantenedorVehiculos?limpiar=1'" class="ui right labeled icon black button">
-                                                Vehículos
-                                                <i class="hand point left icon"></i>
+                            <div class="col-md-4">
+                                <div class="card mb-4 shadow-sm" style="opacity:.85">
+                                    <div class="contenedor-imagen">
+                                        <img class="card-img-top" src="~/Recursos/Imagenes/Btnveh.png" alt="Card image cap">
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">Aquí podrás cargar los productos desde el excel de stock vs consumo de Rayén.</p>
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <div class="btn-group">
+                                                <div id="btnMarketPlace" onclick="window.location.href = '/MantenedorVehiculos?limpiar=1'" class="ui right labeled icon black button">
+                                                    Vehículos
+                                                    <i class="hand point left icon"></i>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-
-
-                        <div class="col-md-4">
-                            <div class="card mb-4 shadow-sm" style="opacity:.85">
-                                <div class="contenedor-imagen">
-                                    <img class="card-img-top" src="~/Recursos/Imagenes/BtnLog.png" alt="Card image cap">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-text">Aquí podrás ver el log de los movimientos más importantes dentro del sistema.</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <div id="btnMarketPlace" onclick="window.location.href = '/log'" class="ui right labeled icon black button">
-                                                Log del sistema
-                                                <i class="hand point left icon"></i>
+                            <div class="col-md-4">
+                                <div class="card mb-4 shadow-sm" style="opacity:.85">
+                                    <div class="contenedor-imagen">
+                                        <img class="card-img-top" src="~/Recursos/Imagenes/BtnLog.png" alt="Card image cap">
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">Aquí podrás ver el log de los movimientos más importantes dentro del sistema.</p>
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <div class="btn-group">
+                                                <div id="btnMarketPlace" onclick="window.location.href = '/log'" class="ui right labeled icon black button">
+                                                    Log del sistema
+                                                    <i class="hand point left icon"></i>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card mb-4 shadow-sm" style="opacity:.85">
-                                <div class="contenedor-imagen">
-                                    <img class="card-img-top" src="~/Recursos/Imagenes/BtnUser.png" alt="Card image cap">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-text">Aquí podrás crear y editar los usuarios del sistema y sus privilegios.</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <div id="btnMarketPlace" onclick="window.location.href = '/MantenedorUsuarios'" class="ui right labeled icon black button">
-                                                Usuarios y privilegios
-                                                <i class="hand point left icon"></i>
+                            <div class="col-md-4">
+                                <div class="card mb-4 shadow-sm" style="opacity:.85">
+                                    <div class="contenedor-imagen">
+                                        <img class="card-img-top" src="~/Recursos/Imagenes/btnYou.png" alt="Card image cap">
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">Aquí podrás ver videos de referencia para el uso de los módulos.</p>
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <div class="btn-group">
+                                                <div id="btnMarketPlace" onclick="window.location.href = '/videos'" class="ui right labeled icon black button">
+                                                    ver videos
+                                                    <i class="youtube icon"></i>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card mb-4 shadow-sm" style="opacity:.85">
-                                <div class="contenedor-imagen">
-                                    <img class="card-img-top" src="~/Recursos/Imagenes/btnRecintos.png" alt="Card image cap">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-text">Aquí podrás crear y editar los recintos del sistema.</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <div id="btnMarketPlace" onclick="window.location.href = '/MantenedorRecintos'" class="ui right labeled icon black button">
-                                                Recintos
-                                                <i class="hand point left icon"></i>
+                        }
+                        @if (SessionH.Usuario.Rol_Id == 3)
+                        {
+                            <div class="col-md-4">
+                                <div class="card mb-4 shadow-sm" style="opacity:.85">
+                                    <div class="contenedor-imagen">
+                                        <img class="card-img-top" src="~/Recursos/Imagenes/Icono-Informaciones.jpg" alt="Card image cap">
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">Aquí podrás crear y editar los usuarios del sistema y sus privilegios.</p>
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <div class="btn-group">
+                                                <div id="btnMarketPlace" onclick="window.location.href = '/MantenedorUsuarios'" class="ui right labeled icon black button">
+                                                    Informe de personas discapacitadas
+                                                    <i class="hand point left icon"></i>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card mb-4 shadow-sm" style="opacity:.85">
-                                <div class="contenedor-imagen">
-                                    <img class="card-img-top" src="~/Recursos/Imagenes/btnYou.png" alt="Card image cap">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-text">Aquí podrás ver videos de referencia para el uso de los módulos.</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <div id="btnMarketPlace" onclick="window.location.href = '/videos'" class="ui right labeled icon black button">
-                                                ver videos
-                                                <i class="youtube icon"></i>
+                        }
+                        @if (SessionH.Usuario.Rol_Id == 4)
+                        {
+                            <div class="col-md-4">
+                                <div class="card mb-4 shadow-sm" style="opacity:.85">
+                                    <div class="contenedor-imagen">
+                                        <img class="card-img-top" src="~/Recursos/Imagenes/BtnUser.png" alt="Card image cap">
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">Aquí podrás crear y editar los usuarios del sistema y sus privilegios.</p>
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <div class="btn-group">
+                                                <div id="btnMarketPlace" onclick="window.location.href = '/MantenedorUsuarios'" class="ui right labeled icon black button">
+                                                    Usuarios y privilegios
+                                                    <i class="hand point left icon"></i>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                            <div class="col-md-4">
+                                <div class="card mb-4 shadow-sm" style="opacity:.85">
+                                    <div class="contenedor-imagen">
+                                        <img class="card-img-top" src="~/Recursos/Imagenes/btnRecintos.png" alt="Card image cap">
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">Aquí podrás crear y editar los recintos del sistema.</p>
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <div class="btn-group">
+                                                <div id="btnMarketPlace" onclick="window.location.href = '/MantenedorRecintos'" class="ui right labeled icon black button">
+                                                    Recintos
+                                                    <i class="hand point left icon"></i>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        }
                     </div>
                 </div>
             </div>
